--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
 
   <header>
     <h1>Conexão Campo & Cidade</h1>
-    <p>Um projeto que celebra a união entre dois mundos essenciais</p>
+    <p>A celebração da cidade e do campo é uma narrativa que reflete a interação entre esses dois mundos que, embora muito diferentes em sua natureza, têm um impacto profundo e mútuo nas pessoas e na cultura.
+       Essa história pode ser contada de várias formas, dependendo da perspectiva histórica, social e até literária.</p>
   </header>
 
   <section class="banner">
-    <h2>Bem-vindo ao Projeto Agrinho</h2>
-    <p>Aqui os alunos exploram como o campo e a cidade se complementam.</p>
+    <h2>A tradição da Celebração</h2>
+    <p>Antigamente, a divisão entre cidade e campo era bem marcada.
+       O campo representava a simplicidade, a natureza, o trabalho agrícola, enquanto a cidade estava associada à industrialização, à agitação e ao comércio. 
+       No entanto, em muitas culturas, ao longo dos séculos, se consolidou uma tradição de celebração que buscava aproximar essas duas realidades, cada uma com sua contribuição essencial para a vida humana.
+Nas festas mais antigas, principalmente no contexto rural, a cidade era vista como um símbolo de progresso e modernidade. Era para lá que os filhos do campo iam em busca de oportunidades, e muitas vezes retornavam para visitar seus familiares.
+ Essas celebrações, como as festas de colheita, eram momentos de agradecimento e união, onde a terra e o trabalho dos camponeses eram exaltados, ao mesmo tempo que se reconhecia o papel vital da cidade como centro de troca, aprendizado e cultura.</p>
   </section>
 
   <section class="sobre">
-    <h2>Sobre o Projeto</h2>
-    <p>O campo produz, a cidade transforma. Juntos, constroem o nosso dia a dia. Este espaço é dedicado à valorização de ambos os ambientes por meio de textos, imagens e criatividade dos alunos.</p>
+    <h2>O Encontro dos Mundos</h2>
+    <p>Com o tempo, essa separação entre cidade e campo começou a se diluir.
+       As festas populares, como as festas juninas no Brasil, ou as feiras de colheita em muitos países, passaram a reunir as pessoas de ambas as esferas. 
+       Nos campos, havia a celebração das boas colheitas, mas também havia a presença da música, da dança e da comida que eram influenciadas pela cultura urbana, criando um cenário de fusão.
+Ao longo do século 20, o Brasil, por exemplo, viu surgir um movimento chamado "Cidade e Campo" que buscava entender como as duas realidades podiam coexistir de maneira equilibrada, e como as celebrações culturais poderiam refletir essa convivência harmônica.
+ Nas grandes cidades, muitos eventos tentaram reproduzir as tradições do campo, com festivais de música folclórica, danças típicas e culinária rural.</p>
   </section>
 
   <section class="galeria">
@@ -35,16 +44,21 @@
   </section>
 
   <section class="textos">
-    <h2>Textos e Reflexões</h2>
-    <p><strong>1. O que o campo representa para você?</strong></p>
+    <h2>O Valor da Celebração</h2>
+    <p><strong>Essas celebrações também são uma forma de ressaltar o valor simbólico que o campo tem na construção da identidade urbana.
+       Para muitas cidades, o campo representava as origens, um vínculo com a natureza e um lugar onde as tradições eram preservadas. No campo, por sua vez, a cidade representava o futuro, o desenvolvimento e a troca de ideias.
+Celebrar a cidade e o campo, então, se tornou um símbolo de equilíbrio. Um lembrete de que, por mais que a modernidade avance, as raízes e a natureza continuam a ser fundamentais para a construção de uma sociedade rica, tanto em cultura quanto em valores.
+
+</strong></p>
     <textarea rows="4" placeholder="Escreva aqui..."></textarea>
 
-    <p><strong>2. Como a cidade se conecta com a vida rural?</strong></p>
-    <textarea rows="4" placeholder="Digite sua resposta..."></textarea>
+    <p><strong>Reflexões Contemporâneas</strong></p>
+    <textarea>Hoje, essas celebrações podem ter diferentes significados, mas permanecem como uma maneira de honrar o trabalho árduo do campo, ao mesmo tempo em que reconhecem o papel da cidade como um centro de inovação e diversidade. 
+      Nos tempos atuais, com o crescimento das cidades e a urbanização acelerada, a necessidade de reconectar-se com o campo e com a natureza também tem ganhado força, especialmente em celebrações relacionadas à sustentabilidade e à agricultura urbana.</textarea>
   </section>
 
   <footer>
-    <p>&copy; 2025 – Projeto Agrinho | Escola ____________________</p>
+    <p>&copy; 2025 – Projeto Agrinho | Escola Colégio Estadual Pedro Marcondes Ribas</p>
   </footer>
 
 </body>
