--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ Ao longo do século 20, o Brasil, por exemplo, viu surgir um movimento chamado "
     <h2>Galeria de Imagens</h2>
     <div class="imagem-box">
       <p><strong>Campo:</strong></p>
-      <img src="" alt="Imagem do campo" class="imagem-exemplo">
+      <img src="" alt="1.jpeg" class="imagem-exemplo">
+     
 
       <p><strong>Cidade:</strong></p>
-      <img src="" alt="Imagem da cidade" class="imagem-exemplo">
+      <img src="" alt="" class="imagem-exemplo">
     </div>
   </section>
 
